# arc-sub-agent-template

./: CLAUDE.md  README.md  pyproject.toml
docs/: SUBAGENT_API.md
src/arc_sub_agent_example/: __init__.py  spec.py
src/arc_sub_agent_example/prompts/: system.md
tests/: conftest.py  test_spec.py
